css address overflow fix

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -134,3 +134,7 @@ div {
   width: 90%;
   margin: 0 auto;
 }
+
+.wb--all {
+  word-break: break-all;
+}
